# Sequencer12

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
app/: app.cpp  app.h
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
build_verify/: CMakeCache.txt  Makefile  cmake_install.cmake  sequencer12
core/: device.h  scheduler.cpp  scheduler.h
devices/dummy/: dummy_device.cpp  dummy_device.h
devices/sequencer/: arp_engine.cpp  arp_engine.h  pattern_bank.cpp  pattern_bank.h  sequencer_device.cpp  sequencer_device.h  sequencer_types.h
devices/sequencer/chords/: chord_library.cpp  (+3 more)
lib/ST7789/: fonts.h  fonts_extra.c  fonts_extra.h  library.json  st7789.c  st7789.h
platform/dac8564/: dac8564.c  dac8564.h
platform/fram/: fram_layout.h  fram_settings.c  fram_settings.h  mb85rc256.c  mb85rc256.h
platform/mcp23017/: mcp23017.c  mcp23017.h  sequencer12.code-workspace
platform/midi/: midi_clock.cpp  midi_clock.h  midi_parser.cpp  midi_parser.h
src/: main.cpp
stm32/: calibration.c  calibration.h  main_stm32.c  sequencer_bridge.cpp  sequencer_bridge.h  stm32f4xx_hal_msp.c  stm32f4xx_hal_msp.h  stm32f4xx_it.c  user_chord_bridge.cpp  user_chord_bridge.h
stm32/hw/: hw_init.c  hw_init.h
ui/: ui_display.c  ui_display.h  ui_icons.h  ui_input.c  ui_input.h  ui_regions.h  ui_sequencer.c  ui_sequencer.h  ui_transport.c  ui_transport.h
ui/screens/: ui_chord_menu_screen.c  ui_chord_menu_screen.h  ui_chord_menu_state.h  ui_chord_params_screen.c  ui_chord_params_screen.h  ui_main_grid_screen.c  ui_main_grid_screen.h  ui_screen_base.h  ui_screen_types.h
